Fixed broken css in main-menu and removed top margin from hero-block

--- a/components/02 - blocks/hero-block/_hero-block.scss
+++ b/components/02 - blocks/hero-block/_hero-block.scss
@@ -186,7 +186,7 @@ img.hero-image {
       }
     }
 
-    margin-top: $lg;
+    margin-top: 0;
     padding: 0;
     margin-bottom: .75rem;
     font-size: calc(100% + 4vw);
