--- a/components/03 - global/menus/main-menu/_main-menu.scss
+++ b/components/03 - global/menus/main-menu/_main-menu.scss
@@ -61,7 +61,7 @@
         @include padding($top: $sm, $right: $sm, $bottom: $sm, $left:0);
         &.is-active {
           &:before {
-            background: $gray;
+            background: $light;
             content: '';
             position: absolute;
             left: 50%;
